Revision history of Alt-Data-Frame-ButMore

0.0044_01   TBD
    - Remove PDL::Stats::Basic from dependencies.

0.0043      2019-04-14
    - Breaking change: Dropped the number_of_rows() method for PDL and row
      names. It becomes redundant as we have a role to add length() method to
      PDL. The removal also helps reduce one dependency of the distributon.
    - PDL::SV: Fixed "uniq" method, added new override methods "set" and
      "sever". Also PDL::SV's doc is briefly written.
    - Add a "summary" method to Data::Frame.
    - Add "iris" example data set to Data::Frame::Examples.
    - Restructured main module doc.
    - Solved a circular use issue between Data::Frame and Data::Frame::Util.
    - Switched from Test::More/Test::Most/Test::Fatal/etc to Test2::V0 for
      testing.

0.0041      2019-03-10
    - Release as Alt-Data-Frame-ButMore by SLOYD.
    - Now it requires perl >= 5.16.
    - Reimplemented PDL::SV, PDL::Factor, PDL::Logical.
    - Add quite a number of methods into Data::Frame.
    - Include a Data::Frame::Examples module for example datasets.

0.003       2014-12-31 00:39:04-0600
    - add a role for Rlike data frames
          * support for methods: head(), tail(), subset()
    - use MooX::Traits to support loading roles easily
    - fix: select_rows() with no arguments should return an empty Data::Frame
    - bump PDL version to use its `unpdl()` method
    - Column::Helper now uses AUTOLOAD to make accessing columns easier in `subset()`

0.002       2014-12-25 03:34:04-0600
    - fix stringifiable length test

0.001       2014-12-23 18:25:37-0600
    - initial version